--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "d3": "^3.5.16",
+    "d3-svg-legend": "^1.10.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "webpack": "^1.12.14"
