--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "d3-svg-legend": "^1.10.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-simpletabs": "^0.7.0",
     "webpack": "^1.12.14"
   }
 }
