--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "babelify": "^7.2.0",
     "d3": "^3.5.16",
     "d3-svg-legend": "^1.10.0",
+    "d3-timer": "^0.4.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-simpletabs": "^0.7.0",
